Name:     parsergen
Version:  0.1.0
Synopsis: TH parser generator for splitting bytestring into fixed-width fields

Description:
  See the 'ParserGen' module for a tutorial

License:       BSD3
License-file:  LICENSE
Author:        Michael Baikov
Maintainer:    manpacket@gmail.com
Category:      Data
Build-type:    Simple
Cabal-version: >= 1.2


Library
  Ghc-options: -Wall

  Exposed-modules:
    ParserGen
    ParserGen.Common
    ParserGen.Gen
    ParserGen.Parser
    ParserGen.ParseQuote
    ParserGen.Repack
    ParserGen.Types

  Build-depends:
    base             >= 3   && < 5,
    bytestring       >= 0.9 && < 0.10,
    directory        >= 1.1 && < 2,
    filepath         >= 1.2 && < 2,
    parsec           >= 3   && < 4,
    template-haskell >= 2.5 && < 3
