Name:     parsergen
Version:  0.2.0.0
Synopsis: TH parser generator for splitting bytestring into fixed-width fields

Description:
  For more information, see the README:
  .
  <https://github.com/tsurucapital/parsergen/blob/master/README.markdown>

License:       BSD3
License-file:  LICENSE
Author:        Michael Baikov
Maintainer:    manpacket@gmail.com
Category:      Data
Build-type:    Simple
Cabal-version: >= 1.8

Extra-source-files:
  README.markdown
  tests/ParserGen/Tests/Packet.ths

Library
  Ghc-options:    -Wall
  Hs-source-dirs: src

  Exposed-modules:
    ParserGen
    ParserGen.Common
    ParserGen.Gen
    ParserGen.Parser
    ParserGen.Repack

  Other-modules:
    ParserGen.Auto
    ParserGen.ParseQuote
    ParserGen.Types

  Build-depends:
    base             >= 3   && < 5,
    bytestring       >= 0.9 && < 0.10,
    directory        >= 1.1 && < 2,
    filepath         >= 1.2 && < 2,
    parsec           >= 3   && < 4,
    template-haskell >= 2.5 && < 3

Test-suite parsergen-tests
  Ghc-options:    -Wall
  Hs-source-dirs: src tests
  Main-is:        TestSuite.hs
  Type:           exitcode-stdio-1.0

  Other-modules:
    ParserGen.Common.Tests
    ParserGen.Tests
    ParserGen.Tests.Packet

  Build-depends:
    HUnit                      >= 1.2 && < 1.3,
    QuickCheck                 >= 2.4 && < 2.6,
    test-framework             >= 0.4 && < 0.7,
    test-framework-hunit       >= 0.2 && < 0.3,
    test-framework-quickcheck2 >= 0.2 && < 0.3,
    -- Copied from regular dependencies...
    base             >= 3   && < 5,
    bytestring       >= 0.9 && < 0.10,
    directory        >= 1.1 && < 2,
    filepath         >= 1.2 && < 2,
    parsec           >= 3   && < 4,
    template-haskell >= 2.5 && < 3

Source-repository head
  Type:     git
  Location: git://github.com/tsurucapital/parsergen.git
